# cpp-builder

./: .gitignore  README.md
bazel/: README.md  build.dockerfile
bazel/libs/: BUILD
bazel/main/: BUILD
clang++-llvm/: README.md  clang-llvm.dockerfile
clang++-llvm/libs/: libs.cc  libs.h
cmake/: README.md  cmake.dockerfile
cmake/add_library/: CMakeLists.txt  main.cc
cmake/add_subdirectory/: CMakeLists.txt
cmake/add_subdirectory/libs/: CMakeLists.txt
cmake/add_subdirectory/libs/main/: main.cc
cmake/add_subdirectory/main/: CMakeLists.txt  main.cc
cmake/simple/: CMakeLists.txt  main.cc
cpython/: README.md
cpython/srcs/: main.py  mmth.cpp  mmth.hpp  setup.py
cross-compiling-armhf/: README.md  build.dockerfile
cross-compiling-armhf/srcs/: main.cpp  mmth.hpp
ctypes/: README.md  main.py
ctypes/srcs/: BUILD  mmth.cpp  mmth.hpp
g++/: Makefile  README.md  gcc.dockerfile
g++/libs/: Makefile  libs.h
g++/main/: Makefile  main.cc
